--- a/projects/content-publisher/docker-compose.yml
+++ b/projects/content-publisher/docker-compose.yml
@@ -9,13 +9,12 @@ x-content-publisher: &content-publisher
   tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
-    - home:/home/build
+    - root-home:/root
   working_dir: /govuk/content-publisher
 
 services:
   content-publisher-lite:
     <<: *content-publisher
-    privileged: true
     depends_on:
       - postgres
       - redis
