--- a/projects/service-manual-publisher/docker-compose.yml
+++ b/projects/service-manual-publisher/docker-compose.yml
@@ -9,13 +9,12 @@ x-service-manual-publisher: &service-manual-publisher
   tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
-    - home:/home/build
+    - root-home:/root
   working_dir: /govuk/service-manual-publisher
 
 services:
   service-manual-publisher-lite:
     <<: *service-manual-publisher
-    privileged: true
     depends_on:
       - postgres
     environment:
