--- a/projects/signon/docker-compose.yml
+++ b/projects/signon/docker-compose.yml
@@ -9,13 +9,12 @@ x-signon: &signon
   tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
-    - home:/home/build
+    - root-home:/root
   working_dir: /govuk/signon
 
 services:
   signon-lite:
     <<: *signon
-    privileged: true
     depends_on:
       - mysql
       - redis
