--- a/projects/feedback/docker-compose.yml
+++ b/projects/feedback/docker-compose.yml
@@ -9,13 +9,12 @@ x-feedback: &feedback
   tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
-    - home:/home/build
+    - root-home:/root
   working_dir: /govuk/feedback
 
 services:
   feedback-lite:
     <<: *feedback
-    privileged: true
 
   feedback-app: &feedback-app
     <<: *feedback
