--- a/projects/hmrc-manuals-api/docker-compose.yml
+++ b/projects/hmrc-manuals-api/docker-compose.yml
@@ -9,7 +9,7 @@ x-hmrc-manuals-api: &hmrc-manuals-api
   tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
-    - home:/home/build
+    - root-home:/root
   working_dir: /govuk/hmrc-manuals-api
 
 services:
