--- a/projects/local-links-manager/docker-compose.yml
+++ b/projects/local-links-manager/docker-compose.yml
@@ -9,21 +9,20 @@ x-local-links-manager: &local-links-manager
   tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
-    - home:/home/build
+    - root-home:/root
   working_dir: /govuk/local-links-manager
 
 services:
   local-links-manager-lite:
     <<: *local-links-manager
-    privileged: true
     depends_on:
       - postgres
     environment:
       DATABASE_URL: "postgresql://postgres@postgres/local-links-manager"
       TEST_DATABASE_URL: "postgresql://postgres@postgres/local-links-manager-test"
+
   local-links-manager-app:
     <<: *local-links-manager
-    privileged: true
     depends_on:
       - postgres
       - nginx-proxy
