--- a/projects/release/docker-compose.yml
+++ b/projects/release/docker-compose.yml
@@ -9,7 +9,7 @@ x-release: &release
   tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
-    - home:/home/build
+    - root-home:/root
   working_dir: /govuk/release
 
 services:
