--- a/projects/transition/docker-compose.yml
+++ b/projects/transition/docker-compose.yml
@@ -9,13 +9,12 @@ x-transition: &transition
   tty: true
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
-    - home:/home/build
+    - root-home:/root
   working_dir: /govuk/transition
 
 services:
   transition-lite:
     <<: *transition
-    privileged: true
     depends_on:
       - postgres
       - redis
